# raycaster

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
res/: stone_wall.ppm
res/maps/: 1.map
src/: CMakeLists.txt  Context.c  Context.h  Map.c  Map.h  Player.h  Renderer.c  Renderer.h  Texture.c  Texture.h  cast.c  cast.h  color.h  colors.txt  constants.h  errorcodes.h  events.c  events.h  helper_functions.c  helper_functions.h  main.c  map.txt  radians.h  typedefs.h  utils.h
src/draw/: draw.c  draw.h
src/maps/: colors.txt  floor_0.txt  map.txt  textures.txt
src/ppm_loader/: ppm_loader.c  ppm_loader.h
src/raycaster/: raycaster.c  raycaster.h
src/sdl_utils/: sdl_utils.c  sdl_utils.h
